--- a/bannerviewpager/build.gradle
+++ b/bannerviewpager/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
+
 android {
-    namespace 'com.matt.myapplication'
+    namespace 'com.matt.bannerviewpager'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.matt.myapplication"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -30,18 +30,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
-    implementation project(':bannerviewpager')
-    implementation 'androidx.core:core-ktx:1.8.0'
+
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
